# Dev_Servicio-Comunitario_Gestor-Horarios

./: .dockerignore  .gitignore  .mailmap  CMakeLists.txt  README.md  skills-lock.json
.atl/: skill-registry.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  feature_request.yml
.github/scripts/: board-screenshot.mjs
.github/workflows/: auto-move-project.yml  board-screenshot.yml
cmake/: CompilerWarnings.cmake
docker/: Dockerfile.dev  docker-compose.yml  verify-dev-env.sh
docs/: issues-detalladas.md  planificacion-sprints.md  reunion-guia-middleware-qa.md
docs/Guias/: CMAKE_GUIDE.md  DOCKER_WORKFLOW.md  GH_ISSUES_CHEATSHEET.md  GITHUB_WORKFLOW.md  Propuesta Producto Mínimo Viable.md  SESION_1_RESUMEN.md  TIMELAPSE_GUIDE.md  WORKFLOW_COMPLETO.md  diagrama-dependencias.md  issues-detalladas.md  planificacion-sprints.md  reunion-arquitectura-flujo.md  reunion-guia-issues.md  reunion-guia-middleware-qa.md
docs/guias/arquitectura/: arquitectura-comunicacion-frontend-backend.md  diagrama-dependencias.md
docs/guias/planificacion/: planificacion-sprints.md
docs/guias/timelapse/: TIMELAPSE_GUIDE.md
docs/guias/visualizacion/: git-graph-guide.md
docs/guias/workflow/: GITHUB_WORKFLOW.md  WORKFLOW_COMPLETO.md
scripts/: gource-timelapse.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main_placeholder.cpp
src/backend/: CMakeLists.txt
src/backend/src/data/: backend_placeholder.cpp
src/common/: CMakeLists.txt
src/frontend/: CMakeLists.txt  frontend_placeholder.cpp  main_window.cpp  main_window.hpp
src/middleware/: CMakeLists.txt  middleware_placeholder.cpp
test/: CMakeLists.txt
